# HandPinter

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
src/: Application.cpp  Application.h  Canvas.cpp  Canvas.h  HandTracker.cpp  HandTracker.h  Menu.cpp  Menu.h  Stroke.cpp  Stroke.h  UIOverlay.cpp  UIOverlay.h  main.cpp
